Added a table of contents

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -50,7 +50,8 @@
         "* https://deepai.org/machine-learning-glossary-and-terms/adam-machine-learning\n",
         "* https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwiv3ve_lOf7AhUFG-wKHQZ1D7IQFnoECCkQAQ&url=https%3A%2F%2Farxiv.org%2Fpdf%2F1412.6980&usg=AOvVaw3A1FgD6VpF0vPpG6_b5gbf\n",
         "* https://keras.io/api/optimizers/\n",
-        "* https://pythonguides.com/adam-optimizer-pytorch/"
+        "* https://pythonguides.com/adam-optimizer-pytorch/\n",
+        "* https://www.datarobot.com/blog/introduction-to-optimizers/"
       ],
       "metadata": {
         "id": "pmPCDfYTKLo7"
@@ -59,10 +60,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hallo, das ist ein Test. :)"
+        "Inhalt\n",
+        "\n",
+        "*   Was sind Optimizer und wofür werden diese eingesetzt?\n",
+        "*   Erläuterung anhand anschaulicher Beispiele\n",
+        "*   Effekte des Adam Optimizers\n",
+        "*   Einsatzbereich\n",
+        "*   Limitierungen\n",
+        "*   Hinweis auf Alternativen und Abgrenzung\n",
+        "*   Fazit\n",
+        "*   Quellen\n",
+        "\n"
       ],
       "metadata": {
-        "id": "bT3tdqjqGk8l"
+        "id": "gGSCXODy67Jl"
       }
     }
   ]
