Testing the python environment
Co-authored-by: masasume <masasume@users.noreply.github.com>

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/BennyGK15/TINF20C_ML_Adam-Optimizer/blob/main/ML_ADAM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,16 +12,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mZUExlrZ2zyA"
+      },
       "source": [
         "Stochastische Optimierung: ADAM\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "mZUExlrZ2zyA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pmPCDfYTKLo7"
+      },
       "source": [
         "Links:\n",
         "* https://github.com/mrhashemi/Optimizers/blob/main/adam_bfgs_optimization.ipynb\n",
@@ -52,13 +40,13 @@
         "* https://keras.io/api/optimizers/\n",
         "* https://pythonguides.com/adam-optimizer-pytorch/\n",
         "* https://www.datarobot.com/blog/introduction-to-optimizers/"
-      ],
-      "metadata": {
-        "id": "pmPCDfYTKLo7"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "gGSCXODy67Jl"
+      },
       "source": [
         "Inhalt\n",
         "\n",
@@ -71,10 +59,42 @@
         "*   Fazit\n",
         "*   Quellen\n",
         "\n"
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "gGSCXODy67Jl"
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "print(test)"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.13 64-bit (microsoft store)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "f5c0429a0d9fd873a8397b96bedc68a9c430b36d28cd38b0c4831aae494627fb"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
