Initial Document State
Co-authored-by: masasume <masasume@users.noreply.github.com>

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -62,16 +62,100 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        }
-      },
-      "outputs": [],
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "print(test)"
+        "# Was ist ein Optimizer und wofür werden diese eingesetzt?"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Beispiele"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Effekte des Adam Optimizers"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Einsatzbereich"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Limitierungen"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Alternativen & Abgrenzung"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Fazit"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Quellen"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "test\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"test\")"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Es soll eine Methode (z.B. ein Optimierer) des Maschinellen Lernens näher beschrieben werden, mit\n",
+        "anschaulichen Beispielen erläutert werden und die Effekte der Methode, sowie der Einsatzbereich und die\n",
+        "Limitierungen dargelegt werden. Hinweise auf Alternativen und eine kurze Abgrenzung gehören ebenfalls\n",
+        "dazu.\n",
+        "\n",
+        "## Was ist ein Optimierer?\n",
+        "//Was ist ein Modell?\n",
+        "//Was ist eine Verlustfunktion?\n",
+        "Mit Hilfe der Verlustfunktion können Modelle anhand ihrer Gewichte optimiert werden. Dieser Prozess kann manuell durchgeführt werden. Dabei werden die Gewichte so angepasst, dass die Verlustfunktion minimiert wird. Der Optimierer nutzt diesen Umstand um automatisiert die Ausgabe der Verlustfunktion zu reduzieren."
       ]
     }
   ],
@@ -86,7 +170,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.9.13"
     },
     "vscode": {
