--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -197,8 +197,29 @@
         "- es natürlich eine Form von Schrittgrößen-Annealing durchfüghrt.\n",
         "\n",
         "![image.png](attachment:image.png)\n",
+        "\n",
         "In disem Ausschnitt sind wichtige Teile des Algorithmus als Pseudocode abgebildet. Dieser wird in der Folge näher beschrieben.\n",
         "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Alternativen & Abgrenzung\n",
+        "\n",
+        "Eine Abgrenzung des Adam Optimierers zu anderen Optimierungsmethoden sollte gezogen werden. Zu den Alternativen gehören folgende Methoden beziehungsweise Optimierern:\n",
+        "- RMSProp\n",
+        "- AdaGrad\n",
+        "- vSGD\n",
+        "- AdaDelta\n",
+        "- natürliche Newton-Methode\n",
+        "- SFO\n",
+        "- NGD\n",
+        "\n",
+        "vSGD, AdaDelta und die natürliche Newton-Methode schätzen die Krümmung aus Informationen erster Ordnung und setzen anhand dieser Informationen die Schrittweite.\n",
+        "Der SFO (Sum-of-Functions Optimierer) ist ein quasi-Newton-Verfahren, das auch Minibatches aufbaut. Im Gegensatz zum Adam Optimierer hat der SFO einen linearen Speicherbedarf in der Anzahl der Minibatch-Partitionen eines Datensatzen. Das wäre auf speicherbeschränkten Systemen, wie zum Beispiel einer GPU meist nicht möglich durchzuführen."
       ]
     }
   ],
