--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -11,6 +11,38 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Verwendete Bibliotheken:\n",
+        "Python:\n",
+        "-Katex"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Verwendete VSCode Extensions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "mZUExlrZ2zyA"
@@ -165,11 +197,11 @@
         "   750 & 1000 & 250\n",
         "\\end{array}$\n",
         "\n",
-        "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen (die Vorhersage ist größer als der Realwert) einen höheren Schaden verursachen, als negative Abweichungen (die Vorhersage ist kleiner als der Realwert). Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet. \n",
+        "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen $(Vorhersage > Realwert)$ einen höheren Schaden verursachen, als negative Abweichungen $(Vorhersage < Realwert)$. Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet. \n",
         "$$\\operatorname{MQA}=\\frac{1}{n} \\sum_{i=1}^n (Vorhersage_i-Realwert_i)^2$$\n",
         "\n",
         "\n",
-        "\n",
+        "Eine andere Möglichkeit den Verlust der Verlustfunktion zu berechnen ist die Likelihood Funktion. Die Likelihood Funktion erhält als Eingabe die vorhergesagte Wahrscheinlichkeit des Eintretens eines Events und multipliziert \n",
         "(Q: https://www.datarobot.com/blog/introduction-to-loss-functions/)\n",
         "\n",
         "\n",
@@ -275,7 +307,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
