--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -15,9 +15,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Verwendete Bibliotheken:\n",
-        "Python:\n",
-        "-Katex"
+        "Verwendete Python Bibliotheken:\n",
+        "- Vorraussetzung: Pip Paketmanager"
       ]
     },
     {
@@ -25,7 +24,25 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# pip install pylatex                                                                           1.4.1\n",
+        "# pip install ipykernel                                                                         6.17.1\n",
+        "# pip install ipython                                                                           8.7.0\n",
+        "# pip install jupyter_client                                                                    7.4.7\n",
+        "# pip install jupyter_core                                                                      5.1.0\n",
+        "# pip install latexcodec                                                                        2.0.1\n",
+        "# pip install matplotlib-inline                                                                 0.1.6\n",
+        "# pip install plotly                                                                            5.11.0\n",
+        "# pip install Sphinx (                                                                          5.3.0\n",
+        "#   applehelp,                                                                                      1.0.2 \n",
+        "#   bibtex,                                                                                         2.5.0\n",
+        "#   devhelp,                                                                                        1.0.2\n",
+        "#   htmlhelp,                                                                                       2.0.0\n",
+        "#   jsmath,                                                                                         1.0.1\n",
+        "#   qthelp,                                                                                         1.0.3\n",
+        "#   serializinghtml                                                                                 1.1.5\n",
+        "# )"
+      ]
     },
     {
       "attachments": {},
@@ -40,7 +57,16 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# IntelliCode                   v.1.2.29                by Microsoft\n",
+        "# Jupyter                       v2022.11.1003412109     by Microsoft\n",
+        "# Jupyter Cell Tags             v0.1.6                  by Microsoft\n",
+        "# Jupyter Keymap                v1.0.0                  by Microsoft\n",
+        "# Jupyter Notebook Renderers    v1.0.12                 by Microsoft\n",
+        "# Jupyter slide Show            v0.1.5                  by Microsoft\n",
+        "# Pylance                       v2022.12.20             by Microsoft\n",
+        "# Python                        v2022.20.0              by Microsoft"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -94,6 +120,20 @@
         "*   Fazit\n",
         "*   Quellen\n",
         "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Abkürzungsverzeichnis\n",
+        "\n",
+        "| Abkürzung | Bedeutung          |\n",
+        "|-----------|--------------------|\n",
+        "| p         | Wahrscheinlichkeit |\n",
+        "|           |                    |\n",
+        "|           |                    |\n"
       ]
     },
     {
@@ -190,18 +230,19 @@
         "\n",
         "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = |Differenz|)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz.\n",
         "\n",
-        "$\\begin{array}{cc}\n",
-        "   Vorhersage & Realwerte & Differenz \\\\\n",
-        "   1500 & 1000 & 500 \\\\\n",
-        "   1000 & 1000 & 0 \\\\\n",
-        "   750 & 1000 & 250\n",
-        "\\end{array}$\n",
+        "| Vorhersage | Realwerte | Differenz |\n",
+        "|------------|-----------|-----------|\n",
+        "| 1500       | 1000      | 0         |\n",
+        "| 1000       | 1000      | 0         |\n",
+        "| 750        | 1000      | 250       |\n",
         "\n",
         "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen $(Vorhersage > Realwert)$ einen höheren Schaden verursachen, als negative Abweichungen $(Vorhersage < Realwert)$. Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet. \n",
         "$$\\operatorname{MQA}=\\frac{1}{n} \\sum_{i=1}^n (Vorhersage_i-Realwert_i)^2$$\n",
         "\n",
         "\n",
-        "Eine andere Möglichkeit den Verlust der Verlustfunktion zu berechnen ist die Likelihood Funktion. Die Likelihood Funktion erhält als Eingabe die vorhergesagte Wahrscheinlichkeit des Eintretens eines Events und multipliziert \n",
+        "Eine andere Möglichkeit den Verlust der Verlustfunktion zu berechnen ist die Likelihood Funktion. Die Likelihood Funktion erhält als Eingabe die vorhergesagte Wahrscheinlichkeit $(p)$ des Eintretens eines Events und multipliziert die Eingabewerte miteinander. Wenn zum Beispiel folgende Vorhersagen $([0.2, 0.35, 0.1, 0.87])$ in Kombination mit folgenden Wahrheitswerten $([1, 0, 0, 1])$ getroffen wurden, berechnet sich der Wert der Likelihood Funktion wie folgt:\n",
+        "$$0.2 * (1-0.35) * (1-0.1) * 0.87 = 0.102$$\n",
+        "Für alle falschen Werte wird die Wahrscheinlichkeit über $1-p$ berechnet.\n",
         "(Q: https://www.datarobot.com/blog/introduction-to-loss-functions/)\n",
         "\n",
         "\n",
@@ -224,8 +265,7 @@
         "\n",
         "(Q: https://www.datarobot.com/blog/introduction-to-optimizers/)\n",
         "\n",
-        "Neben dem Gradientenabstieg existiert der Adam Optimizer.\n",
-        "\n"
+        "Neben dem Gradientenabstieg existiert der Adam Optimizer."
       ]
     },
     {
