--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -141,7 +141,62 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Was ist ein Optimizer und wofür werden diese eingesetzt?"
+        "# Optimierer und ihre Verwendungszwecke\n",
+        "Bevor die Funktionsweise von Optimierern im Detail erläutert wird, werden zwei mit Optimierern zusammenhänge Begriffe, Verlustfunktion und Machine Learning Modell, definiert.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Definition der Verlustfunktion\n",
+        "Die Verlustfunktion ordnet in einem Entscheidungsraum ${\\displaystyle (\\Omega ,\\Sigma )}$ Bereichsschätzungen und Punktschätzungen den Schaden zu, der durch eine vom wahren Parameter abweichende Entscheidung verursacht wird. Die Verlustfunktion wird innerhalb eines statistischen Models ${\\displaystyle (X,{\\mathcal {A}},(P_{\\vartheta })_{\\vartheta \\in \\Theta })}$ verwendet und ist wie folgt aufgebaut: ${\\displaystyle L:\\Theta \\times \\Omega \\to [0,+\\infty ]}$. Dabei gilt, das die Funktion ${\\displaystyle L(\\vartheta ,\\cdot )} {\\displaystyle \\Sigma -{\\mathcal {B}}([0,+\\infty ])}$ für jedes fixierte ${\\displaystyle \\vartheta \\in \\Theta }$ messbar ist. (Q: https://de.wikipedia.org/wiki/Verlustfunktion_(Statistik))\n",
+        "\n",
+        "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = |Differenz|)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz.\n",
+        "\n",
+        "| Vorhersage | Realwerte | Differenz |\n",
+        "|------------|-----------|-----------|\n",
+        "| 1500       | 1000      | 0         |\n",
+        "| 1000       | 1000      | 0         |\n",
+        "| 750        | 1000      | 250       |\n",
+        "\n",
+        "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen $(Vorhersage > Realwert)$ einen höheren Schaden verursachen, als negative Abweichungen $(Vorhersage < Realwert)$. Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet. \n",
+        "$$\\operatorname{MQA}=\\frac{1}{n} \\sum_{i=1}^n (Vorhersage_i-Realwert_i)^2$$\n",
+        "\n",
+        "\n",
+        "Eine andere Möglichkeit den Verlust der Verlustfunktion zu berechnen ist die Likelihood Funktion. Die Likelihood Funktion erhält als Eingabe die vorhergesagte Wahrscheinlichkeit $(p)$ des Eintretens eines Events und multipliziert die Eingabewerte miteinander. Wenn zum Beispiel folgende Vorhersagen $([0.2, 0.35, 0.1, 0.87])$ in Kombination mit folgenden Wahrheitswerten $([1, 0, 0, 1])$ getroffen wurden, berechnet sich der Wert der Likelihood Funktion wie folgt:\n",
+        "$$0.2 * (1-0.35) * (1-0.1) * 0.87 = 0.102$$\n",
+        "Für alle falschen Werte wird die Wahrscheinlichkeit über $1-p$ berechnet.\n",
+        "(Q: https://www.datarobot.com/blog/introduction-to-loss-functions/)\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Definition Modell\n",
+        "Ein Machine Learning Modell ist definiert als Datei, die bestimmte Muster erkennt (Q: https://learn.microsoft.com/de-de/windows/ai/windows-ml/what-is-a-machine-learning-model). Die Musterkennung des Modells wird durch Training mit Daten verbessert. Durch das Training entsteht ein Vorhersagemodell, welches mit einer hohen Wahrscheinlichkeit Vorhersagen anhand von Eingabedaten treffen kann (Q: Murdoch. Interpretable machine learning: definitions,\n",
+        "methods, and applications, S. 2).\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "## Wie können Modelle optimiert werden?\n",
+        "Mit Hilfe der Verlustfunktion können Modelle anhand ihrer Gewichte optimiert werden. Dieser Prozess kann manuell durchgeführt werden. Dabei werden die Gewichte so angepasst, dass die Verlustfunktion minimiert wird. Ein Optimierer automatisiert diesen Prozess. Er setzt die Ausgabe der Verlustfunktion und die Eingabe der Gewichte in Relation und optimiert die Gewichte so, dass die Verlustfunktion minimiert wird.\n",
+        "\n",
+        "Ein beispielhafter Optimierer ist der Gradientenabstieg. Der Gradientenabstieg optimiert Modelle in zwei Schritten:\n",
+        "1. Berechne für jedes Gewicht welchen Einfluss kleine Änderungen auf die Verlustfunktion haben. Dieser Einfluss auf die Verlustfunktion wird Gradient genannt. Ein Gradient ist ein Spaltenvektor, der die partiellen Ableitungen von f nach den Spaltenvektoren (also den Gewichten) enthält (Q:https://studyflix.de/mathematik/gradient-berechnen-1350).\n",
+        "2. Modifiziere die Gewichte anhand der Gradienten, sodass die Verlustfunktion kleiner wird.\n",
+        "\n",
+        "Die Schritte eins und zwei werden so lange wiederholt, bis die Verlustfunktionen einen festgelegten minmalen Wert erreicht hat. Die Geschwindigkeit mit dem der Gradientenabstieg operiert, kann über die Lernrate angepasst werden. Die Lernrate bestimmt die Größe der Änderungen, die der Gradientenabstieg an den Gewichten vornimmt. Diese wird in Kommazahlen angegeben und hat meistens Werte von 0.0001 bis 0.001. Die Gradienten werden mit der Lernrate multipliziert. \n",
+        "Eine zu kleine Lernrate kann dazu führen, das der Gradientenabstieg Optimierer Probleme mit lokalen Minima hat. In diesem Fall geht der Optimierer davon aus, dass er den minimalsten Punkt erreicht hat, jedoch handelt es sich bei dem Punkt nur um ein lokales Minimum.\n",
+        "\n",
+        "Ein weiteres Problem für Optimierer kann Overfitting darstellen. Beim Overfitting wird das Model zu sehr auf die Daten mit denen es trainiert wurde angepasst. Dadurch kann das Modell mit den Trainingsdaten nahezu perfekt arbeiten, hat jedoch Probleme mit realen Daten. Overfitting tritt auf, wenn einzelne Gewichte einen zu hohen Einfluss auf das Model haben und dadurch das Ergebnis zu stark modifizieren. Optimierer können Overfitting durch das Hinzufügen von einem zusätzlichen Strafparameter zur Verlustfunktion vermeiden. Der Strafparameter bestraft Optimierer, wenn sie zu große Werte für Gewichte nehmen, auch wenn dadurch die Verlustfunktion kleiner wird. Dadurch verändern Optimierer mehrere Gewichte in kleinen Schritten, anstatt einzelne Gewichte in großen Schritten.\n",
+        "\n",
+        "(Q: https://www.datarobot.com/blog/introduction-to-optimizers/)\n",
+        "\n",
+        "Neben dem Gradientenabstieg existiert der Adam Optimizer."
       ]
     },
     {
@@ -202,6 +257,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
       "outputs": [
@@ -215,57 +277,6 @@
       ],
       "source": [
         "print(\"test\")"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Optimierer und ihre Verwendungszwecke\n",
-        "Bevor die Funktionsweise von Optimierern im Detail erläutert wird, werden zwei mit Optimierern zusammenhänge Begriffe, Verlustfunktion und Machine Learning Modell, definiert.\n",
-        "\n",
-        "### Definition der Verlustfunktion\n",
-        "Die Verlustfunktion ordnet in einem Entscheidungsraum ${\\displaystyle (\\Omega ,\\Sigma )}$ Bereichsschätzungen und Punktschätzungen den Schaden zu, der durch eine vom wahren Parameter abweichende Entscheidung verursacht wird. Die Verlustfunktion wird innerhalb eines statistischen Models ${\\displaystyle (X,{\\mathcal {A}},(P_{\\vartheta })_{\\vartheta \\in \\Theta })}$ verwendet und ist wie folgt aufgebaut: ${\\displaystyle L:\\Theta \\times \\Omega \\to [0,+\\infty ]}$. Dabei gilt, das die Funktion ${\\displaystyle L(\\vartheta ,\\cdot )} {\\displaystyle \\Sigma -{\\mathcal {B}}([0,+\\infty ])}$ für jedes fixierte ${\\displaystyle \\vartheta \\in \\Theta }$ messbar ist. (Q: https://de.wikipedia.org/wiki/Verlustfunktion_(Statistik))\n",
-        "\n",
-        "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = |Differenz|)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz.\n",
-        "\n",
-        "| Vorhersage | Realwerte | Differenz |\n",
-        "|------------|-----------|-----------|\n",
-        "| 1500       | 1000      | 0         |\n",
-        "| 1000       | 1000      | 0         |\n",
-        "| 750        | 1000      | 250       |\n",
-        "\n",
-        "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen $(Vorhersage > Realwert)$ einen höheren Schaden verursachen, als negative Abweichungen $(Vorhersage < Realwert)$. Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet. \n",
-        "$$\\operatorname{MQA}=\\frac{1}{n} \\sum_{i=1}^n (Vorhersage_i-Realwert_i)^2$$\n",
-        "\n",
-        "\n",
-        "Eine andere Möglichkeit den Verlust der Verlustfunktion zu berechnen ist die Likelihood Funktion. Die Likelihood Funktion erhält als Eingabe die vorhergesagte Wahrscheinlichkeit $(p)$ des Eintretens eines Events und multipliziert die Eingabewerte miteinander. Wenn zum Beispiel folgende Vorhersagen $([0.2, 0.35, 0.1, 0.87])$ in Kombination mit folgenden Wahrheitswerten $([1, 0, 0, 1])$ getroffen wurden, berechnet sich der Wert der Likelihood Funktion wie folgt:\n",
-        "$$0.2 * (1-0.35) * (1-0.1) * 0.87 = 0.102$$\n",
-        "Für alle falschen Werte wird die Wahrscheinlichkeit über $1-p$ berechnet.\n",
-        "(Q: https://www.datarobot.com/blog/introduction-to-loss-functions/)\n",
-        "\n",
-        "\n",
-        "\n",
-        "### Definition Modell\n",
-        "Ein Machine Learning Modell ist definiert als Datei, die bestimmte Muster erkennt (Q: https://learn.microsoft.com/de-de/windows/ai/windows-ml/what-is-a-machine-learning-model). Die Musterkennung des Modells wird durch Training mit Daten verbessert. Durch das Training entsteht ein Vorhersagemodell, welches mit einer hohen Wahrscheinlichkeit Vorhersagen anhand von Eingabedaten treffen kann (Q: Murdoch. Interpretable machine learning: definitions,\n",
-        "methods, and applications, S. 2).\n",
-        "\n",
-        "### Wie können Modelle optimiert werden?\n",
-        "Mit Hilfe der Verlustfunktion können Modelle anhand ihrer Gewichte optimiert werden. Dieser Prozess kann manuell durchgeführt werden. Dabei werden die Gewichte so angepasst, dass die Verlustfunktion minimiert wird. Ein Optimierer automatisiert diesen Prozess. Er setzt die Ausgabe der Verlustfunktion und die Eingabe der Gewichte in Relation und optimiert die Gewichte so, dass die Verlustfunktion minimiert wird.\n",
-        "\n",
-        "Ein beispielhafter Optimierer ist der Gradientenabstieg. Der Gradientenabstieg optimiert Modelle in zwei Schritten:\n",
-        "1. Berechne für jedes Gewicht welchen Einfluss kleine Änderungen auf die Verlustfunktion haben. Dieser Einfluss auf die Verlustfunktion wird Gradient genannt. Ein Gradient ist ein Spaltenvektor, der die partiellen Ableitungen von f nach den Spaltenvektoren (also den Gewichten) enthält (Q:https://studyflix.de/mathematik/gradient-berechnen-1350).\n",
-        "2. Modifiziere die Gewichte anhand der Gradienten, sodass die Verlustfunktion kleiner wird.\n",
-        "\n",
-        "Die Schritte eins und zwei werden so lange wiederholt, bis die Verlustfunktionen einen festgelegten minmalen Wert erreicht hat. Die Geschwindigkeit mit dem der Gradientenabstieg operiert, kann über die Lernrate angepasst werden. Die Lernrate bestimmt die Größe der Änderungen, die der Gradientenabstieg an den Gewichten vornimmt. Diese wird in Kommazahlen angegeben und hat meistens Werte von 0.0001 bis 0.001. Die Gradienten werden mit der Lernrate multipliziert. \n",
-        "Eine zu kleine Lernrate kann dazu führen, das der Gradientenabstieg Optimierer Probleme mit lokalen Minima hat. In diesem Fall geht der Optimierer davon aus, dass er den minimalsten Punkt erreicht hat, jedoch handelt es sich bei dem Punkt nur um ein lokales Minimum.\n",
-        "\n",
-        "Ein weiteres Problem für Optimierer kann Overfitting darstellen. Beim Overfitting wird das Model zu sehr auf die Daten mit denen es trainiert wurde angepasst. Dadurch kann das Modell mit den Trainingsdaten nahezu perfekt arbeiten, hat jedoch Probleme mit realen Daten. Overfitting tritt auf, wenn einzelne Gewichte einen zu hohen Einfluss auf das Model haben und dadurch das Ergebnis zu stark modifizieren. Optimierer können Overfitting durch das Hinzufügen von einem zusätzlichen Strafparameter zur Verlustfunktion vermeiden. Der Strafparameter bestraft Optimierer, wenn sie zu große Werte für Gewichte nehmen, auch wenn dadurch die Verlustfunktion kleiner wird. Dadurch verändern Optimierer mehrere Gewichte in kleinen Schritten, anstatt einzelne Gewichte in großen Schritten.\n",
-        "\n",
-        "(Q: https://www.datarobot.com/blog/introduction-to-optimizers/)\n",
-        "\n",
-        "Neben dem Gradientenabstieg existiert der Adam Optimizer."
       ]
     },
     {
@@ -323,7 +334,8 @@
         "Der SFO (Sum-of-Functions Optimierer) ist ein quasi-Newton-Verfahren, das auch Minibatches aufbaut. Im Gegensatz zum Adam Optimierer hat der SFO einen linearen Speicherbedarf in der Anzahl der Minibatch-Partitionen eines Datensatzen. Das wäre auf speicherbeschränkten Systemen, wie zum Beispiel einer GPU meist nicht möglich durchzuführen.\n",
         "\n",
         "Bei RMSProp (Root Mean Square Propagation) handelt es sich um einen Optimierer, der eng mit dem Adam Optimierer verwandt ist. Es kann auch vorkommen, dass eine Version mit Momentum eingesetzt wird (Graves, 2013). Wird nun RMSProp mit Momentum eingesetzt, so werden die Parameteraktualisierungen anhand eines Momentums auf dem neu skalierten Gradienten generiert. Der Adam Optimierer hingegen werden die Aktualisierungen anhand eines Durchschnitts des ersten und zweiten Momentums des Gradienten geschätzt. Ein weiterer Nachteil bei RMSProp ist das nicht vorhandensein eines Bias Korrekturbegriffs. Dieser wäre notwendig, wenn ein Wert von $\\beta _{2}$ nahe dem Wert eins (1) ist, da in diesem Fall eine Nichtkorrektur der Verzerrung zu sehr großen Schrittweiten führen kann, woraus sich in der Folge eine Divergenz entwickeln kann. [siehe 6.4]\n",
-        "\n"
+        "\n",
+        "Der AdaGrad Algorithmus passt die Lernrate an die Parameter an und führt kleiner Aktualisierungen für Parameter durch, die mit häufig auftretenden Features verbunden sind. Aktualisierungen größeren Umfangs für Parameter, die mit seltenen F"
       ]
     }
   ],
